AmicarDP/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Divisa__c</fullName>
        <label>Divisa</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requerido__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requerido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seleccionado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seleccionado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>